PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phodevi: Support for reading the Radeon DRM driver's current core/memory frequencies when DPM is enabled (Linux 3.11+)

Phoronix Test Suite 4.8 Milestone 5
06 August 2013

- pts-core: Add php5-json as a dependency now on Debian packages since Ubuntu split it up and no longer in php5-cli
- pts-core: Add support for reporting set kernel module parameters to notes on the system table graph
- pts-core: Add support for reporting of important environment variables to notes on the system table graph
- pts-core: Changes needed for modern Phoromatic
- pts_Graph: Add new automated color chooser for line graph color selection
- pts_Graph: Slight rework to code handling the remove of common words from result identifiers
- phodevi: Add support for Intel DRM driver's gt_max_freq_mhz for obtaining maximum GPU frequency on modern kernels
- phodevi: Add support for Intel DRM driver's gt_cur_freq_mhz for obtaining current GPU frequency on modern kernels
- phodevi: Only prepend AIB vendor to NVIDIA and AMD GPU strings
- phodevi: Add system.kernel-parameters property for reading kernel command line parameters
- phodevi: Add support for checking the __GL_FSAA_MODE environment variable
- phodevi: Add support for checking the __GL_LOG_MAX_ANISO environment variable
- phodevi: Add 0xc36400 super block for CephFS
- phodevi: Add unity-system-compositor version detection

Phoronix Test Suite 4.8 Milestone 4
24 July 2013

- pts-core: Add initial support for test profile's downloads.xml to have a SHA256 hash for files
- pts-core: Rename NO_MD5_CHECKS environment variable to NO_FILE_HASH_CHECKS
- pts-core: Add PTS5 codenames from Tulskaya oblast / Tula Oblast Russian region
- pts-core: Support fixes for Facebook HipHop Virtual Machine for PHP HHVM 2.1.0
- pts-core: Fix text corruption bug with auto shortening of identifiers on multi-way comparisons
- pts_Graph: Fix auto shortening when the first identifier is only one word